assets/styles/style.css
/* ... */
.footer-sub1 {
    display: flex;
    align-items: baseline;
    gap: 50px;
}

.footer-sub2 {
    display: flex;
    align-items: center;
    width: 100%;
    justify-content: space-evenly;
}

.footer-icons {
    display: flex;
    gap: 15px;
    text-align: center;
}

.footer-icons a {
    font-size: 30px;
    background: linear-gradient(112.77deg, #C381DB 0%, #4E92F9 100%);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    margin: auto;
    background-clip: text;
    text-fill-color: transparent;
}

.footer h4 {
    font-size: 20px;
    color: #5A6980;
}

.footer p {
    font-weight: 400;
    font-size: 15px;
    line-height: 22px;
    color: #7E92B3;
}

.footer-sub2 input {
    border: 1px solid #90A8CC;
    width: 100%;
    height: 35px;
    border-radius: 20px;
    font-family: 'PT Sans';
    font-size: 16px;
    color: #90A8CC;
    padding: 2px 20px;
}

.footer-sub2 h3 {
    font-family: 'PT Sans';
    font-weight: 700;
    color: #5A6980;
    padding-bottom: 10px;
}

#footer-empty {
    width: 80%;
    height: 1px;
    background: #B4D2FF;
    margin: auto;
}

#footer-text {
    display: flex;
    justify-content: center;
    font-weight: 700;
    line-height: 22px;
    color: #6C7E99;
    gap: 270px;
    padding: 30px 0px;
}

#footer-text a {
    text-decoration: none;
    color: #6C7E99;
}

#footer-text i {
    color: red;
}

.footer-section {
    background: rgba(255, 255, 255, 0.4);
    position: relative;
    overflow: hidden;
}

.blob-orange1 {
    position: absolute;
    width: 560px;
    height: 560px;
    left: -100px;
    top: 242px;
    background: radial-gradient(50% 50% at 50% 50%, rgba(255, 176, 7, 0.6) 0%, rgba(255, 176, 7, 0) 100%);
    filter: blur(127px);
    z-index: -1;
}

.blob-blue1 {
    position: absolute;
    width: 500px;
    height: 500px;
    background: radial-gradient(50% 50% at 50% 50%, rgba(7, 62, 255, 0.5) 0%, rgba(7, 77, 255, 0) 100%);
    filter: blur(127px);
    z-index: -1;
    right: 0;
    top: 0;
}

.project-section {
    position: relative;
    z-index: 2;
}

.blob-red {
    position: absolute;
    width: 239px;
    height: 500px;
    left: 360px;
    top: 182px;
    background: linear-gradient(161.26deg, rgba(255, 28, 0, 0.14) 12.67%, rgba(255, 28, 0, 0) 99.27%);
    filter: blur(102px);
    z-index: -10;
}

.blob-blue2 {
    position: absolute;
    width: 461px;
    height: 461px;
    left: -109px;
    top: 66px;
    filter: blur(102px);
    background: radial-gradient(52.01% 52.01% at 67.65% 52.01%, rgba(78, 146, 249, 0.2) 0%, rgba(78, 146, 249, 0) 100%);
    z-index: -1;
}

.blob-yellow2 {
    position: absolute;
    width: 249px;
    height: 567px;
    top: -90px;
    background: radial-gradient(52.01% 52.01% at 67.65% 52.01%, rgba(255, 214, 0, 0.4) 0%, rgba(255, 199, 0, 0) 100%);
    filter: blur(102px);
    right: 0;
}

.blob-yellow3 {
    position: absolute;
    width: 194px;
    height: 350px;
    left: 0;
    background: radial-gradient(54.43% 54.43% at 50% 50%, rgba(255, 176, 7, 0.72) 0%, rgba(255, 176, 7, 0) 100%);
    filter: blur(107.5px);
    bottom: -100px;
}
.form-inline{
    display: inline-flex;
    gap: 10px;
}
.btn-blue{
    width: 168px;
    height: 36px;
    background: linear-gradient(112.77deg, #C381DB 0%, #4E92F9 100%);
    border-radius: 18px;
    color: #ffffff;
    border: none;
    box-shadow: 0px 5px 20px rgb(155 188 240);
    font-family: 'PT Sans';
    font-weight: 700;
    font-size: 14px;
    cursor: pointer;
}
.link-decor{
    text-decoration: none;
    color: inherit;
    margin-right: 175px;
}
/* ... */

